<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:id="@+id/linearLayout">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/tvFIO2Activity"
                    android:id="@+id/textView"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="30dp"
                    android:textColor="@color/tvBlue_color"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView"
                        android:src="@drawable/person"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/testString"
                        android:id="@id/idDataFIO"
                        android:layout_marginTop="3dp"
                        android:layout_marginLeft="3dp"
                        />
            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/tvPhone2Activity"
                    android:id="@+id/textView3"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="30dp"
                    android:textColor="@color/tvBlue_color" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView2"
                        android:src="@drawable/phone"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/testString"
                        android:id="@id/idDataPhone"
                        android:linksClickable="true"
                        android:layout_marginTop="3dp"
                        android:layout_marginLeft="3dp"
                    android:clickable="false"
                    android:autoLink="phone" />
            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/tvEmail2Activity"
                    android:id="@+id/textView5"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="30dp"
                    android:textColor="@color/tvBlue_color"
                android:onClick="onClick" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView3"
                        android:src="@drawable/mail"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/testString"
                        android:id="@id/idDataEmail"
                        android:linksClickable="true"
                        android:layout_marginTop="3dp"
                        android:layout_marginLeft="3dp"
                    android:autoLink="email" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/tvBD2Activity"
                        android:id="@+id/textView7"
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="30dp"
                        android:textColor="@color/tvBlue_color"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView4"
                        android:src="@drawable/birthday"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/testString"
                        android:id="@id/idDataBD"
                        android:layout_marginTop="3dp"
                        android:layout_marginLeft="3dp"/>

            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/tvGender2Activity"
                    android:id="@+id/textView9"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="30dp"
                    android:textColor="@color/tvBlue_color"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView5"
                        android:src="@drawable/gender" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/testString"
                        android:id="@id/idDataGender"
                        android:layout_marginLeft="3dp"
                        android:layout_marginTop="3dp"/>
            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/tvWorkPosition2Activity"
                    android:id="@+id/textView11"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="30dp"
                    android:textColor="@color/tvBlue_color"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView6"
                        android:src="@drawable/job"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/testString"
                        android:id="@id/idDataWorkPosition"
                        android:layout_marginTop="3dp"
                        android:layout_marginLeft="3dp"/>
            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/tvSalary2Activity"
                    android:id="@+id/textView13"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="30dp"
                    android:textColor="@color/tvBlue_color"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView7"
                        android:src="@drawable/wallet"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/testString"
                        android:id="@id/idDataSalary"
                        android:layout_marginTop="3dp"
                        android:layout_marginLeft="3dp"/>
            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/tvAnswer2Activity"
                    android:id="@+id/textView15"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="30dp"
                    android:textColor="@color/tvBlue_color"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@id/idDataAnswer"
                    android:layout_gravity="left|center_vertical"
                    android:minLines="5"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:textAlignment="viewStart"/>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btSend"
                    android:id="@id/idBtAnswer"
                    android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>